# budgy

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  go.mod  go.sum  sqlc.yml
backend/cmd/api/: main.go
backend/db/: query.sql  schema.sql
backend/internal/config/: config.go  router.go
backend/internal/handler/: test.go
backend/internal/handlers/: status.go  transaction-types.go  transactions.go  user.go  users.go
backend/internal/helpers/: auth.go  passwords.go  responses.go
backend/internal/middleware/: auth.go  config.go  logging.go
backend/internal/repository/: models.go  query.sql.go
backend/migration/src/: lib.rs  m20240328_000001_create_budgy_user_table.rs  m20240328_000002_create_transaction_type_table.rs  m20240328_000003_create_transaction_table.rs
backend/migrations/2024-03-23-142857_create_transaction_and_category/: down.sql  up.sql
backend/migrations/2024-03-30-143314_create_budgy_user/: down.sql  up.sql
backend/migrations/2024-03-30-143547_create_transaction_type/: down.sql  up.sql
backend/migrations/2024-03-30-143549_create_transaction/: down.sql  up.sql
backend/src/: config.rs  main.rs  models.rs  router.rs  schema.rs
backend/src/handlers/: transactions.rs  users.rs
backend/src/helpers/: internal_err.rs  jwt.rs  mod.rs
backend/src/middleware/: auth.rs
budgy/: bruno.json
frontend/: .eslintrc.cjs  .prettierrc.json  app.vue  bun.lockb  eslint.config.js  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/assets/css/: transitions.css
frontend/layouts/: default.vue
frontend/pages/: index.vue
frontend/src/: App.vue  main.ts
frontend/stores/: user.ts
frontend/utils/: navigation.ts
(+60 files in other folders)
