[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
sea-orm = { version = "1.0.0-rc.3", features = ["sqlx-postgres"] }
