[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "*", features = ["postgres", "chrono"] }
dotenvy = { version = "*" }
chrono = { version = "0.4.37", features = ["serde"] }
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
deadpool-diesel = { version = "0.5.0", features = ["postgres"] }
serde = { version = "1.0.197", features = ["derive"] }
jsonwebtoken = "9.3.0"
